fix creative team section layer bug , adding happy cusotmer , fix overflow in contact section

--- a/css/style.css
+++ b/css/style.css
@@ -102,6 +102,9 @@ transition: background-color ease-in-out 1s ;
     color: white;
     background-color: black;
 }
+.about .btn:not(:disabled):not(.disabled){
+    border-color: rgba(0, 0, 0, .25);
+}
                             /*About Section end*/
 /*-------------------------------------------------------------------------------------------*/
 /*-------------------------------------------------------------------------------------------*/
@@ -122,17 +125,15 @@ font-size: 2rem;
              transform: translateX(-50%);
  }          
  .img-overlay{
-     height: 0;
      left: 0;
-     bottom: 0;
+     top: 100%;
      background-color: rgba(0, 195, 218, 0.9);
-     -webkit-transition:1s all ease-in-out;
-     -o-transition:1s all ease-in-out;
-     transition:1s all ease-in-out;
+     -webkit-transition:1s top ease-in-out;
+     -o-transition:1s top ease-in-out;
+     transition:1s top ease-in-out;
  }        
  .img-container:hover .img-overlay{
-     height: 100%;
-     font-weight: ppo;
+     top: 0;
  }     
                             /*Team Section Start*/
  /*-------------------------------------------------------------------------------------------*/
@@ -247,7 +248,19 @@ font-size: 1rem;
     color: #787878;
     font-size: .7rem;
     font-family: 'Poppins', sans-serif;
-}                     
+} 
+.nav-pills .nav-link, .nav-pills .show>.nav-link {
+    background-color: rgba(0, 0, 0, 0.1);
+}
+.nav-pills .nav-link.active, .nav-pills .show>.nav-link {
+    background-color: #00c3da;
+}
+#happy-customers a{
+    padding: 0;
+    width: 20px;
+    height: 20px;
+}
+
                                 /* happy customers */
 /*-------------------------------------------------------------------------------------------*/
 /*-------------------------------------------------------------------------------------------*/
@@ -288,6 +301,7 @@ font-size: 1rem;
     font-size: .9rem;
     font-family: 'Poppins';
 }
+
 /*contact form*/
 
                                     /*contact*/
